[INJICERT-1145] Host did keys for credential config entries only
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>